@startuml
package studia.Board {
  class Board {
    + cornerPoints : List<Point>
    + height : int
    + length : int
    + players : Player[]
    + points : Point[][]
    + triangleSize : int
    + validPointsMap : Map<Integer, Point>
    + validPointsNumber : int
    + Board()
    + addCornerPoint(point : Point)
    + generateNeighbours1()
    + generateNeighbours2()
    + initPoints()
    + move(oldPoint : Point, newPoint : Point)
    + printBoard()
    + setHeight(height : int)
    + setLength(length : int)
    + setPlayers(players : Player[])
    + setPoint(point : Point, x : int, y : int)
    + setTriangleSize(triangleSize : int)
  }
  class BoardBuilder {
    # board : Board
    # height : int
    # length : int
    - pawnsPerPlayer : int
    - playerNumber : int
    - players : Player[]
    - seed : int
    # triangleSize : int
    - variant : int
    - yin_corners : int
    + BoardBuilder(triangleSize : int, players : Player[], pawnsPerPlayer : int)
    + build()
    + getBoard() : Board
    # initBoard()
    - initCornerPoints()
    - initFinishPoints()
    - initPlayers(playerNumber : int)
    # initPoints()
    - initValidPointsMap()
    + setSeed(seed : int)
    + setVariant(variant : int)
    + setYinCorners(corners : int)
    - spawnPawns()
  }
  class FXBoard {
    + FXBoard()
    + printBoard()
  }
  class FXBoardBuilder {
    + FXBoardBuilder(triangleSize : int, players : Player[], pawnsPerPlayer : int)
    # initPoints()
  }
  class GUIBoardBuilder {
    - board : Board
    - paneHeight : int
    - paneWidth : int
    + GUIBoardBuilder(board : Board, paneWidth : int, paneHeight : int)
    + buildBoard() : Pane
    + getPointsGroup() : Group
  }
}
GUIBoardBuilder -->  "-board" Board
BoardBuilder -->  "-board" Board
FXBoard --|> Board 
FXBoardBuilder --|> BoardBuilder 
@enduml